--- a/model/index.html
+++ b/model/index.html
@@ -6,6 +6,7 @@
     <title>Conceitos</title>
 </head>
 <body>
+    <link rel="cadastroLivro" href="cadastroLivro.php">
     <h1>Conceitos Aula 03</h1>
     <h2>Izabela Gomes</h2>
 
