--- a/model/index.html
+++ b/model/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Conceitos</title>
+    <title>Conceitos + VisualPAradigm</title>
 </head>
 <body>
     <link rel="cadastroLivro" href="cadastroLivro.php">
     <h1>Conceitos Aula 03</h1>
-    <h2>Izabela Gomes</h2>
-
+    <h3>Izabela Gomes</h3>
+    <h2>VisualPAradigm</h2>
+    <img src="img/ATM System Class Diagrams-Page-2.png"alt="VisualPAradigm" > 
     <h3>Encapsulamento</h3>
     <p>Encapsulamento é um conceito em programação que se refere a esconder os detalhes internos de um objeto e expor apenas o que é necessário para o uso daquele objeto. Em outras palavras, ele protege os dados de um objeto, permitindo o acesso e a modificação desses dados apenas por meio de métodos definidos. Isso ajuda a manter a integridade dos dados e a evitar alterações indevidas.</p>
 
@@ -27,8 +28,8 @@
         <li>Responsabilidade: Representa os dados da aplicação e a lógica de negócios. O Model é responsável por interagir com o banco de dados e manipular os dados conforme necessário.</li>
         <li>Relação com as outras classes: O Model comunica-se diretamente com o Controller. Ele fornece os dados necessários ao Controller e atualiza os dados quando recebe instruções do Controller.</li>
     </ul>
-    <p><a href="https://www.google.com/imgres?q=mvc&imgurl=https%3A%2F%2Fres.cloudinary.com%2Fpracticaldev%2Fimage%2Ffetch%2Fs--CGsBK2z7--%2Fc_limit%252Cf_auto%252Cfl_progressive%252Cq_auto%252Cw_880%2Fhttps%3A%2F%2Fdev-to-uploads.s3.amazonaws.com%2Fi%2F7py33y398bt1zbahbp9b.png&imgrefurl=https%3A%2F%2Fdev.to%2Felisangelamsilva%2Fprincipais-conceitos-do-padrao-mvc-model-view-controller-1o5a&docid=">Imagem sobre MVC</a></p> 
-
+    <img src="https://miro.medium.com/v2/resize:fit:720/format:webp/1*eqghG-tH1flMjAOFcsOjIQ.png" alt="Imagem sobre MVC" width="" height="400">
+    
     <li>View (Visão):</li>
     <ul>
         <li>Responsabilidade: É a interface de usuário. A View é responsável por apresentar os dados ao usuário de maneira visual. Ela exibe as informações fornecidas pelo Model de forma que o usuário possa interagir com elas.</li>
