--- a/model/index.html
+++ b/model/index.html
@@ -12,10 +12,13 @@
     <h2>VisualPAradigm</h2>
     <img src="img/ATM System Class Diagrams-Page-2.png"alt="VisualPAradigm" > 
     <h3>Encapsulamento</h3>
-    <p>Encapsulamento é um conceito em programação que se refere a esconder os detalhes internos de um objeto e expor apenas o que é necessário para o uso daquele objeto. Em outras palavras, ele protege os dados de um objeto, permitindo o acesso e a modificação desses dados apenas por meio de métodos definidos. Isso ajuda a manter a integridade dos dados e a evitar alterações indevidas.</p>
+    <p>Encapsulamento é um conceito em programação que se refere a esconder os detalhes internos de um objeto e expor apenas o que é necessário para o uso daquele objeto.<br>
+         Em outras palavras, ele protege os dados de um objeto, permitindo o acesso e a modificação desses dados apenas por meio de métodos definidos. Isso ajuda a manter a integridade dos dados e a evitar alterações indevidas.</p>
 
     <h3>Controller</h3>
-    <p>Um Controller (ou Controlador) é uma parte de um sistema que lida com a lógica de entrada do usuário e coordena como o sistema responde a essa entrada. Ele atua como intermediário entre a interface do usuário (como uma página web) e a lógica de negócios ou banco de dados. Em frameworks como o MVC (Model-View-Controller), o Controller decide o que fazer com os dados recebidos e qual resposta enviar de volta ao usuário.</p>
+    <p>Um Controller (ou Controlador) é uma parte de um sistema que lida com a lógica de entrada do usuário e coordena como o sistema responde a essa entrada.<br>
+         Ele atua como intermediário entre a interface do usuário (como uma página web) e a lógica de negócios ou banco de dados. <br>
+         Em frameworks como o MVC (Model-View-Controller), o Controller decide o que fazer com os dados recebidos e qual resposta enviar de volta ao usuário.</p>
 
     <h3>Model-View-Controller(MVC)</h3>
     <p>O padrão MVC (Model-View-Controller) é uma arquitetura de software que separa a aplicação em três componentes principais, cada um com uma responsabilidade distinta. A relação entre essas classes é essencial para organizar o código de forma modular e manter a separação de responsabilidades.</p>
